src/test/ui/inference/inference_unstable_featured.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/inference_unstable_featured.rs:16:20
   |
LL |     assert_eq!('x'.ipu_flatten(), 0);
   |                    ^^^^^^^^^^^ multiple `ipu_flatten` found
   |
   = note: candidate #1 is defined in an impl of the trait `inference_unstable_iterator::IpuIterator` for the type `char`
   = help: to disambiguate the method call, write `inference_unstable_iterator::IpuIterator::ipu_flatten('x')` instead
   = note: candidate #2 is defined in an impl of the trait `inference_unstable_itertools::IpuItertools` for the type `char`
   = help: to disambiguate the method call, write `inference_unstable_itertools::IpuItertools::ipu_flatten('x')` instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0034`.
